src/sass/globals/_minireset.sass
/*! modified version of minireset.css v0.0.4 
    MIT License
    github.com/jgthms/minireset.css */
// Blocks
html,
body,
p,
ol,
ul,
li,
dl,
dt,
dd,
div,
blockquote,
figure,
fieldset,
legend,
textarea,
pre,
iframe,
hr,
h1,
h2,
h3,
h4,
h5,
h6,
details,
summary,
button,
input,
select,
textarea
  margin: 0
  padding: 0

body,
input,
textarea,
button
  font-family: $text-font
  // std-color
  color: map-get($text-color, 'fg')
  font-size: $text-base-fontsize
  line-height: 2 * $unit
  border-color: map-get($text-color, 'fg')

*:focus
  outline: rgba(map-get($text-color, 'fg'), $focus-outline-opacity) dashed $focus-outline-width
  outline-offset: $unit / 2
  transition: all $color-transition-delay ease

input,
textarea,
button
  background-color: create_variant(map-get($text-color, 'bg'), $variant-diff)
  transition: all $color-transition-delay ease

a
  text-decoration: none
  color: map-get($text-color, 'accent')
  border-color: map-get($text-color, 'fg')

// Headings
h1,
h2,
h3,
h4,
h5,
h6
  font-weight: normal

// List
ul
  list-style: none

// Box sizing
html
  box-sizing: border-box

*
  &,
  &::before,
  &::after
    box-sizing: inherit

// Media
img,
embed,
iframe,
object,
video
  height: auto
  max-width: 100%

audio
  max-width: 100%

// Iframe
iframe
  border: 0

// Table
table
  border-collapse: collapse
  border-spacing: 0

td,
th
  padding: 0
  text-align: left

